<?xml version="1.0"?>
<package format="2">
    <name>lidar_camera_tools</name>
    <version>0.0.0</version>
    <description>The lidar_camera_tools package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="ou@todo.todo">ou</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    

    <depend>roscpp</depend>
    <depend>cv_bridge</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>

    <depend>message_generation</depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>PCL</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
